ECA-7626: Add more JVM options to reduce memory usage
git-svn-id: https://svn.cesecore.eu/svn/ejbca-restricted/trunk/ejbca@31839 37aeb1de-b14b-0410-9a0e-82b28170d228