@@ -13,10 +13,11 @@ sudo -E env "PATH=$PATH" cp -rf /opt/jboss-ejb-client.properties /app/ejbca/src/
 sleep 10
 
 cd /app/ejbca
-export ANT_OPTS="-Xms64m -Xmx1536m"
+export JAVA_OPTS="-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -XX:+UseG1GC -XX:+UseCompressedStrings -XX:+UseCompressedOops -Xms64m -Xmx1280m"
+export ANT_OPTS="$JAVA_OPTS"
 
 # needs to be *clean* build, because otherwise the ejb remote configs won't be built into the package
-sudo -E env "PATH=$PATH" "ANT_OPTS=$ANT_OPTS" ant clean build
+sudo -E env "PATH=$PATH" "ANT_OPTS=$ANT_OPTS" "JAVA_OPTS=$JAVA_OPTS" ant clean build
 
 echo '=================== build finished ========================'
  
